fix: overflow

--- a/components/partials/Details/Details.scss
+++ b/components/partials/Details/Details.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .DetailsContents {
